--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+#Убираю токен с публичного доступа
+token.js
