--- a/royaluzbot/package.json
+++ b/royaluzbot/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.1.4",
+    "nodemon": "^1.18.4",
     "telegraf": "^3.23.0"
   }
 }
